2017-05-22  Tim Horton  <timothy_horton@apple.com>

        ExplicitSnapshotsChangeUponNavigation API test often fails
        https://bugs.webkit.org/show_bug.cgi?id=172475
        <rdar://problem/31688322>

        Reviewed by Simon Fraser.

        * TestWebKitAPI/cocoa/TestWKWebView.mm:
        (-[TestWKWebView _setUpTestWindow:]):
        Make TestWKWebView's window layer-backed. This is now the default,
        and it's also easy to accidentally write a test that depends on it
        (for example, ExplicitSnapshotsChangeUponNavigation adds an NSBox,
        which becomes layer backed, just like the WKWebView, but with no
        common layer-backed ancestor).

2017-05-22  youenn fablet  <youenn@apple.com>

        Resync web-platform-tests up to 8df7c9c215678328212f232ce0b5270c505a8563
        https://bugs.webkit.org/show_bug.cgi?id=172426

        Reviewed by Chris Dumez.

        * Scripts/webkitpy/w3c/test_importer.py:
        (TestImporter.remove_deleted_files): Outputting warning when trying to delete a file that no longer exists.

2017-05-22  Konstantin Tokarev  <annulen@yandex.ru>

        Unreviewed, change my status to reviewer and fill "expertise" field

        * Scripts/webkitpy/common/config/contributors.json:

2017-05-22  Tomas Popela  <tpopela@redhat.com>

        Remove some of the EFL port leftovers
        https://bugs.webkit.org/show_bug.cgi?id=172440

        Reviewed by Carlos Garcia Campos.

        * BuildSlaveSupport/built-product-archive:
        (archiveBuiltProduct):
        (extractBuiltProduct):
        * BuildSlaveSupport/test-result-archive:
        (archiveTestResults):
        * ImageDiff/PlatformEfl.cmake: Removed.
        * Scripts/run-efl-tests: Removed.
        * Scripts/webkit-build-directory:
        * Scripts/webkitpy/common/config/contributionareas.py:
        * Scripts/webkitpy/common/config/watchlist:
        * Scripts/webkitpy/layout_tests/run_webkit_tests.py:
        (parse_args):