@@ -1,3 +1,14 @@
+2017-05-22  Jason Marcell  <jmarcell@apple.com>
+
+        Do not enter Subversion-specific logic when parsing Git-based Trac data.
+        https://bugs.webkit.org/show_bug.cgi?id=172433
+        <rdar://problem/32234188>
+
+        Reviewed by Alexey Proskuryakov.
+
+        * BuildSlaveSupport/build.webkit.org-config/public_html/dashboard/Scripts/Trac.js:
+        (Trac.prototype._convertCommitInfoElementToObject):
+
 2017-05-22  Tim Horton  <timothy_horton@apple.com>
 
         ExplicitSnapshotsChangeUponNavigation API test often fails
